# stock-research

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  index.md  log.md  notes.md  setup.md  status.md
src/stock_research/: __init__.py  cli.py  config.py  models.py
src/stock_research/analysis/: levels.py  technical.py
src/stock_research/data/: fundamentals.py  news_rss.py  options_snapshot.py  price_history.py  schwab_client.py
src/stock_research/report/: builder.py  markdown.py
src/stock_research/templates/: preliminary.md.j2
tests/: test_config.py  test_fundamentals.py  test_levels.py  test_markdown.py  test_models.py  test_news.py  test_technical.py
tests/fixtures/: sample_news.xml  sample_quote.json
