[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-research"
version = "0.1.0"
description = "Programmatic stock research report generator"
requires-python = ">=3.11"
dependencies = [
    "schwab-py>=1.4",
    "pydantic>=2.5",
    "jinja2>=3.1",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]

[project.scripts]
stock-research = "stock_research.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
